--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -4,7 +4,7 @@
 </p>
 <a href="/todos/{{ todo._id }}/edit">edit</a>
 <a href="/">back</a>
-<form action="/todos/{{ todo._id}}/delete" method="POST" style="display: inline;">
+<form action="/todos/{{ todo._id}}?_method=DELETE" method="POST" style="display: inline;">
   {{!-- form 預設是 block 但 a 是 inline 元素 --}}
   <button type="submit">delete</button>
 </form>
